--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>Digital Clock</title>
+    <title>Test Clock</title>
   </head>
   <body>
     <div class="container">
